added vote component and changed poll structure

--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,12 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script>
+      //activate border style when user hits tab key for keyboard navigators
+      function handleFirstTab(e) {
+      if (e.keyCode === 9) {
+          document.body.classList.add('user-is-tabbing');
+          window.removeEventListener('keydown', handleFirstTab);}}
+      window.addEventListener('keydown', handleFirstTab);</script>
   </body>
 </html>
